[package]
name = "uma"
description = "UMA Protocol SDK for Rust"
authors = ["Lightspark Group, Inc. <info@lightspark.com>"]
version = "0.5.2"
edition = "2021"
documentation = "https://app.lightspark.com/docs/uma-sdk"
homepage = "https://github.com/uma-universal-money-address/uma-rust-sdk"
repository = "https://github.com/uma-universal-money-address/uma-rust-sdk"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
futures = "0.3" 
tokio = { version = "1.12.0", features = ["full"] } 
base64 = "0.21.0"
serde_json = "1.0.94"
serde = { version = "1.0.155", features = ["derive"] }
sha2 = "0.10.7"
rand_core = "0.6.4"
ecies = {version = "0.2.6", default-features = false, features = ["pure"]}
bitcoin = "0.30.1"
url = "2.4.1"
chrono = "0.4.24"
hex = "0.4.3"
url-builder = "0.1.1"
